--- a/aula06/ex002.html
+++ b/aula06/ex002.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>meu primeiro programa</title>
+    <title>meu segundo programa</title>
     <style>
         body {
         background-color: rgb(255, 255, 255);
