--- a/aula06/ex002.html
+++ b/aula06/ex002.html
@@ -13,7 +13,7 @@
     </style>
 </head>
 <body>
-    <h1>Olá,Mundo!</h1> <!--isso é um comentario-->
+    <h1>Olá,Mundo!</h1> <!--isso é um comentario.-->
     <p>me livrei da maldição</p>
     <script>
      var nome = window.prompt('Qual o seu nome?') // vai perguntar o nome...
