--- a/aula06/ex003.html
+++ b/aula06/ex003.html
@@ -7,7 +7,7 @@
     <style>
         body {
         background-color: rgb(255, 255, 255);
-        font: 15pt arial; /* teste isso é um comentario */
+        font: 15pt arial; /* teste isso é um comentario. */
         color: black;
         }
     </style>
