--- a/aula04/ex001.html
+++ b/aula04/ex001.html
@@ -19,7 +19,7 @@
     </style>
 </head>
 <body>
-    <h1>Olá, Mundo!</h1>
+    <h1>Olá, Mundo!.</h1>
     <p>me livrei da maldição</p>
 </body>
 </html>
