segundo commit geral

--- a/aula06/ex003.html
+++ b/aula06/ex003.html
@@ -16,7 +16,7 @@
     <h1>Olá,Mundo!</h1> <!--isso é um comentario-->
     <p>me livrei da maldição</p>
     <script>
-        var n1 = Number(window.prompt('digite um número'))
+        var n1 = Number(window.prompt('digite um número.'))
         var n2 = Number(window.prompt('digite outro número'))
         var s =n1 + n2
         window.alert(`o seu resultado é ${s}`)
