--- a/aula09/ex005.html
+++ b/aula09/ex005.html
@@ -14,7 +14,7 @@
     </style>
 </head>
 <body>
-    <h1>iniciando estudos com DOM</h1>      
+    <h1>iniciando estudos com DOM.</h1>      
     <p>aqui vai o resultado</p>
     <p>aprendendo a usar <strong>DOM</strong> em javascript</p>
     <div id="msg">clica em mim</div>
