--- a/aula010/ex007.html
+++ b/aula010/ex007.html
@@ -23,7 +23,7 @@
     <input type="number" name="txtn1" id="txtn1"> +
     <input type="number" name="txtn2" id="txtn2">
     <input type="button" value="somar" onclick="somar()">
-    <div id="res">resultado</div>
+    <div id="res">resultado.</div>
     <script>
         function somar() {
             var tn1 = window.document.querySelector('input#txtn1')
