--- a/aula011/ex010.html
+++ b/aula011/ex010.html
@@ -7,7 +7,7 @@
         <title>DETRAN</title>
 </head>
 <body>
-    <h1>teste de velocidade</h1>
+    <h1>teste de velocidade.</h1>
     velocidade do carro: <input type="number" name="txtvel" id="txtvel"> km/h 
     <input type="button" value="verificar" onclick="calcular()">
     <div id="res">
