--- a/aula012/ex015/modelo.html
+++ b/aula012/ex015/modelo.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1>Verificador Idade</h1>
+        <h1>Verificador Idade.</h1>
     </header>
     <section>
         <div>
