--- a/aula16ex/modelo/modelo.html
+++ b/aula16ex/modelo/modelo.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>tabuada</title>
+    <title>modelo de exercicios</title>
      <link rel="stylesheet" href="estilo.css">
 </head>
 <body>
@@ -12,13 +12,10 @@
     </header>
     <section>
         <div>
-            Número:
-            <input type="number" name="num" id="num">
-            <input type="button" value="Gerar Tabuada" onclick="contar()">
+            Testando...
         </div>
-        <div id="res">
-            <select name="tabuada" id="tabuada" size="10"></select>
-            <option>Digite um número acima.</option>
+        <div>
+            Olá!
         </div>
     </section>
     <footer>
