--- a/aula16ex/modelo.html
+++ b/aula16ex/modelo.html
@@ -3,22 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Analizador de Números</title>
-    <link rel="stylesheet" href="modelo.css">
+    <title>modelo de exercicios</title>
+     <link rel="stylesheet" href="estilo.css">
 </head>
 <body>
     <header>
-        Analizador de Números
+        <h1>Titulo</h1>
     </header>
     <section>
         <div>
-            
+            Testando...
         </div>
         <div>
-            
+            Olá!
         </div>
     </section>
-    <footer>&copy; PaulaDentroFromSoftwareCompany</footer>
-    <script src="modelo.js"></script>
+    <footer>
+        <p>&copy; PaulaDentroFromSoftwareCompany</p>
+    </footer>
+    <script src="javascript.js"></script>
 </body>
 </html>
