--- a/aula16ex/ex018/modelo.html
+++ b/aula16ex/ex018/modelo.html
@@ -3,19 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>modelo de exercicios</title>
+    <title>Analizador de Números</title>
      <link rel="stylesheet" href="estilo.css">
 </head>
 <body>
     <header>
-        <h1>Titulo</h1>
-    </header>
+        <h1>Analizador de Números</h1>
     <section>
         <div>
-            Testando...
+            Número (entre 1 a 100):
+            <input type="number" name="fnum" id="fnum">
+            <input type="button" value="Adicionar">
+            <select name="flista" id="flista" size="6"></select>
         </div>
         <div>
-            Olá!
+            olá!
         </div>
     </section>
     <footer>
