--- a/aula16ex/ex018/modelo.html
+++ b/aula16ex/ex018/modelo.html
@@ -13,11 +13,12 @@
         <div>
             Número (entre 1 a 100):
             <input type="number" name="fnum" id="fnum">
-            <input type="button" value="Adicionar">
-            <select name="flista" id="flista" size="6"></select>
+            <input type="button" value="Adicionar" onclick="adicionar()">
+            <br><br><select name="flista" id="flista" size="6"></select>
+            <br><input type="button" value="Finalizar">
         </div>
-        <div>
-            olá!
+        <div id="res">
+            
         </div>
     </section>
     <footer>
