--- a/aula012/modelo/modelo.html
+++ b/aula012/modelo/modelo.html
@@ -15,7 +15,7 @@
             Testando...
         </div>
         <div>
-            Olá!
+            Olá!.
         </div>
     </section>
     <footer>
