--- a/aula06/ex003.html
+++ b/aula06/ex003.html
@@ -17,7 +17,7 @@
     <p>me livrei da maldição</p>
     <script>
         var n1 = Number(window.prompt('digite um número.'))
-        var n2 = Number(window.prompt('digite outro número'))
+        var n2 = Number(window.prompt('digite outro número.'))
         var s =n1 + n2
         window.alert(`o seu resultado é ${s}`)
     </script>
