--- a/aula010/ex006.html
+++ b/aula010/ex006.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>eventos DOM</title>
+    <title>eventos DOM.</title>
     <style>
         div#area {
             background-color: deepskyblue;
