--- a/aula06/ex004.html
+++ b/aula06/ex004.html
@@ -14,7 +14,7 @@
 </head>
 <body>
     <script>
-        var nome = window.prompt('qual o seu nome?')
+        var nome = window.prompt('qual o seu nome?.')
         document.writeln(`o seu nome é muito lindo <strong>${nome}</strong>, o seu nome tem ${nome.length} letras`)
     </script>
 </body>
