--- a/aula09/ex005.html
+++ b/aula09/ex005.html
@@ -16,7 +16,7 @@
 <body>
     <h1>iniciando estudos com DOM.</h1>      
     <p>aqui vai o resultado</p>
-    <p>aprendendo a usar <strong>DOM</strong> em javascript</p>
+    <p>aprendendo a usar <strong>DOM</strong> em javascript.</p>
     <div id="msg">clica em mim</div>
     <script>
         var corpo = window.document.body
