--- a/aula14ex/ex017/modelo.html
+++ b/aula14ex/ex017/modelo.html
@@ -18,7 +18,7 @@
         </div>
         <div id="res">
             <select name="tabuada" id="tabuada" size="10"></select>
-            <option>Digite um número acima.</option>
+            <option>Digite um número acima</option>
         </div>
     </section>
     <footer>
