--- a/aula16ex/ex018/modelo.html
+++ b/aula16ex/ex018/modelo.html
@@ -11,7 +11,7 @@
         <h1>Analizador de Números</h1>
     <section>
         <div>
-            Número (entre 1 a 100):
+            Número (entre 1 a 100.):
             <input type="number" name="fnum" id="fnum">
             <input type="button" value="Adicionar" onclick="adicionar()">
             <br><br><select name="flista" id="flista" size="6"></select>
