meu primeiro commit

--- a/aula012/ex014/modelo.html
+++ b/aula012/ex014/modelo.html
@@ -12,7 +12,7 @@
     </header>
     <section>
         <div id="msg">
-            Aqui vai aparecer a imagem...
+            Aqui vai aparecer a imagem..
         </div>
         <div id="foto">
             <img id="img" src="manha.jpg" alt="Foto do dia">
