--- a/aula011/ex010.html
+++ b/aula011/ex010.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>teste de velocidade.</h1>
-    velocidade do carro: <input type="number" name="txtvel" id="txtvel"> km/h. 
+    velocidade do carro: <input type="number" name="txtvel" id="txtvel"> km/h
     <input type="button" value="verificar" onclick="calcular()">
     <div id="res">
 
