--- a/aula06/ex002.html
+++ b/aula06/ex002.html
@@ -17,7 +17,7 @@
     <p>me livrei da maldição</p>
     <script>
      var nome = window.prompt('Qual o seu nome?') // vai perguntar o nome...
-    window.alert('é um grande prazer em te conhecer, '+nome+'!.')
+    window.alert('é um grande prazer em te conhecer, '+nome+'!')
     </script>
 </body>
 </html>
