--- a/aula011/ex009.html
+++ b/aula011/ex009.html
@@ -3,23 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>pais</title>
+    <title>País</title>
 </head>
 <body>
-    <h1>Qual o seu país?</h1>
-    <input type="search" name="txtp" id="txtp">
-    <input type="button" value="Verificar" onclick="pais()">
+    <h1>Qual País você é?</h1>
+    <input type="text" name="txtp" id="txtp">
+    <input type="button" value="ver" onclick="pais()">
     <div id="res"></div>
     <script>
         function pais() {
-            var txtp = document.querySelector('#txtp').value;
-            var res = document.querySelector('#res');
-
-            if (txtp.toLowerCase() === 'brasil') { 
-                res.innerHTML = `Ai sim, ${txtp} é fogo mas é muito top!`;
-                return
-             }
-            res.innerHTML = `Oh, ${txtp} é muito legal, mas você é estrangeiro.`;
+            var txtp = document.querySelector('#txtp').value
+            var res = document.querySelector('#res')
+            if(txtp.toLowerCase() == 'brasil') {
+                res.innerHTML = 'ai sim o Brasil é top mas é fogo!'
+            }
+            else {
+                res.innerHTML = `${txtp} é top em`
+            }
         }
     </script>
 </body>
