--- a/aula011/ex010.html
+++ b/aula011/ex010.html
@@ -15,11 +15,11 @@
     </div>
     <script>
         function calcular() {
-            var txtv = document.getElementById('txtvel')
-            var res = document.getElementById('res')
+            var txtv = document.querySelector('input#txtvel')
+            var res = document.querySelector('div#res')
             var vel = Number(txtv.value)
             res.innerHTML = `<p>Sua velocidade atual é de <strong>${vel}km/h</strong></p>`
-            if (vel > 79) {
+            if (vel > 60) {
                 res.innerHTML += `<p>Você está <strong>MULTADO</strong> por excesso de velocidade</p>`
             }
             res.innerHTML += `<p>Dirija sempre com cinto de segurança!</p>`
