--- a/aula14ex/ex017/modelo.html
+++ b/aula14ex/ex017/modelo.html
@@ -17,8 +17,9 @@
             <input type="button" value="Gerar Tabuada" onclick="contar()">
         </div>
         <div id="res">
-            <select name="tabuada" id="tabuada" size="10"></select>
-            <option>Digite um número acima.</option>
+            <select name="tabuada" id="tabuada" size="10">
+                <option>Digite um número acima.</option>
+            </select>
         </div>
     </section>
     <footer>
