--- a/aula16ex/ex018/modelo.html
+++ b/aula16ex/ex018/modelo.html
@@ -3,22 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Analizador de Números.</title>
+    <title>Analisador de Números</title>
      <link rel="stylesheet" href="estilo.css">
 </head>
 <body>
     <header>
-        <h1>Analizador de Números</h1>
+        <h1>Analisador de Números</h1>
+    </header>
     <section>
         <div>
-            Número (entre 1 a 100.):
-            <input type="number" name="fnum" id="fnum">
-            <input type="button" value="Adicionar" onclick="adicionar()">
-            <br><br><select name="flista" id="flista" size="6"></select>
-            <br><input type="button" value="Finalizar">
+            Número (entre 1 e 100)
+            <input type="number" name="txtn" id="txtn">
+            <input type="button" value="Adicionar" onclick="Adicionar()">
+            <br><select name="lista" id="lista" size="6"></select>
+            <br><input type="button" value="Finalizar" onclick="Finalizar()">
         </div>
         <div id="res">
-            
+
         </div>
     </section>
     <footer>
